fix: adjust dialog layout for select icon dialog to improve responsiveness on mobile

--- a/src/app/shared/components/select-icon-dialog/select-icon-dialog.component.scss
+++ b/src/app/shared/components/select-icon-dialog/select-icon-dialog.component.scss
@@ -4,12 +4,14 @@
 
 @media screen and (max-width: 650px) {
   .select-icon-dialog {
-    width: 100vw !important;
-    max-width: 100vw !important;
+    width: 100% !important;
+    max-width: 100% !important;
     max-height: 70vh !important;
 
     .icons {
       padding-bottom: 3rem !important;
+      padding-left: 0.2rem !important;
+      padding-right: 0.2rem !important;
     }
   }
 }
@@ -33,7 +35,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    max-height: 60%;
     overflow-y: scroll;
     gap: 1.5rem;
     padding: 0.5rem 3rem 1.5rem 3rem;
